<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Strings related to Splash screen-->
    <string name="app_name">Journal App</string>
    <string name="andela_logo">Andela Logo</string>
    <string name="google_logo">Google Logo</string>
    <string name="udacity_logo">Udacity Logo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="welcome_msg">WELCOME</string>
    <string name="or_sign_up">OR SIGN UP</string>
    <string name="or_sign_in">OR SIGN IN</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="poor_connectivitiy">Please check your internet connectivity.</string>
    <string name="pls_retry">Registration unsuccessful, please try again.</string>
    <string name="email_already_registered">E-mail address already registered</string>
    <string name="title_activity_catalog">CatalogActivity</string>
    <string name="my_journal">My Diary</string>
    <string name="login_error_message">Unable to sign in, please retry (check your email, password and/or your internet connectivity).</string>
    <string name="journal_title">Diary Entry Title</string>
    <string name="journal_content">Diary Entry Content</string>
    <string name="created_at">June 12, 2018</string>
    <string name="edited">EDITED</string>
    <string name="keyword_edited">EDITED</string>
    <string name="keyword_unedited">UNEDITED</string>
    <string name="insert_new_journal">Insert new diary entry</string>
    <string name="delete_all_journals">Delete all diary entries</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="title_activity_add_journal">Add Diary Entry</string>
    <string name="keyword_show">SHOW</string>
    <string name="keyword_hide">HIDE</string>
    <string name="journal_content_edittext_hint">You can write here...!</string>
    <string name="keyword_save">SAVE</string>
    <string name="keyword_cancel">CANCEL</string>
    <string name="actionbar_title_edit_journal">Edit Diary Entry</string>
    <string name="alert_dialog_negative_button_label">NO</string>
    <string name="alert_dialog_positive_button_label">YES</string>
    <string name="journal_edit_notif_msg">Do you want to save changes to this diary entry?</string>
    <string name="new_journal_save_notif_msg">Do you want to save this diary entry?</string>
    <string name="ignore_journal_edit_notif_msg">Ignore changes made?</string>
    <string name="close_journal_without_saving_notif_msg">Close without saving?</string>
    <string name="nothing_to_save_toast_msg">Nothing to save!</string>
    <string name="title_not_empty_error_msg">Diary Entry Title cannot be empty!</string>
    <string name="content_not_empty_error_msg">Diary Entry Content cannot be empty!</string>
    <string name="title_activity_journal_preview">Diary Entry Preview</string>
    <string name="last_update">LAST UPDATED: <xliff:g example="date" id="date_update">%s</xliff:g></string>
    <string name="keyword_edit">Edit</string>
    <string name="copied_link_clipboard_label">Copied Link</string>
    <string name="copied_link_toast_msg_content">Link copied to clipboard</string>
    <string name="never_edited">Never edited</string>
    <string name="delete_all_journals_prompt">Are you sure you want to delete all the diary entries in your catalog?</string>
    <string name="empty_catalog_prompt">Oops! Your catalog is empty. Click on the floating button below to insert a new diary entry to the catalog.</string>
    <string name="catalog_already_empty">Catalog is already empty</string>
    <string name="logout_prompt">Do you want to logout?</string>
    <string name="signing_up">Signing up...</string>
    <string name="signing_in">Signing in...</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="journal_preview_notification_title">Some cool write-up in here</string>
    <string name="journal_preview_notification_body">Heads up! Checkout some interesting diary entry you have in your catalog.</string>
</resources>
