<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_insert_new_journal"
        android:title="@string/insert_new_journal"
        app:showAsAction="never"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/action_delete_all_journals"
        android:title="@string/delete_all_journals"
        app:showAsAction="never"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/action_setting"
        android:title="@string/settings"
        app:showAsAction="never"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/action_logout_list"
        android:title="@string/logout"
        app:showAsAction="never"
        android:orderInCategory="4"/>
</menu>