<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eemf.sirgoingfar.journalapp.SplashActivity"
    android:background="@drawable/bg_splash_green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_journal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/dimen_50sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/img_andela_logo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/andela_logo"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:src="@drawable/img_andela_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/img_google_logo"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp" />

    <ImageView
        android:id="@+id/img_google_logo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/google_logo"
        android:src="@drawable/img_google_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/img_andela_logo"
        app:layout_constraintRight_toLeftOf="@+id/img_udacity_logo"
        android:layout_marginBottom="@dimen/dimen_8dp"/>

    <ImageView
        android:id="@+id/img_udacity_logo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/udacity_logo"
        android:src="@drawable/img_udacity_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/img_google_logo"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_8dp" />

</android.support.constraint.ConstraintLayout>
