<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16dp"
    android:background="@color/colorWhite"
    tools:context="com.eemf.sirgoingfar.journalapp.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_msg"
                android:textSize="@dimen/text_25sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/il_email"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_32dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_email"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryText"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_password"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@+id/il_email"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryText"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_button"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@+id/il_password"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="@dimen/dimen_5dp"
                app:cardElevation="@dimen/dimen_3dp">

                <Button
                    android:id="@+id/btn_sign_in_or_register"
                    style="?android:textAppearanceSmall"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:background="@color/colorAccent"
                    android:layout_margin="@dimen/dimen_3dp"/>

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/tv_sign_in_or_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_up"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/cv_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/dimen_32dp"
                android:paddingLeft="@dimen/dimen_16dp"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingRight="@dimen/dimen_16dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:paddingBottom="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:textAllCaps="true"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>
